samples/_failures_safe/1761129458_84c858_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a4520d0.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_7a4520d0.c:155:5: error: expected expression at end of input
  155 |     if (parser == NULL) return
      |     ^~
./samples/SAFE/__tmp_7a4520d0.c:155:5: error: expected declaration or statement at end of input
